--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -5,24 +5,25 @@ page-home {
       padding-left: 10px !important;
       padding-bottom: 10px !important;      
       margin-bottom: 10px;
-      color: #fff !important;
+      color: gray !important;
       background-color: transparent !important;      
       font-size: 0.2em;
     }
      ::-webkit-input-placeholder {
-      color: white !important;
+      color: gray !important;
     }
     
     .button {
       text-transform: none;
       border-radius: 3px !important;
+      background: linear-gradient(316deg, transparentize(gray, .15), gray);
       &.activated {
-        background-color: rgba(255,255,255,.4) !important;
+        background-color: white !important;
       }
     }
     
     ion-content {
-      background: linear-gradient(316deg, transparentize(black, .15), #404654);
+      background: linear-gradient(316deg, transparentize(whitesmoke, .15), whitesmoke);
     }
 
     .container {
@@ -33,6 +34,6 @@ page-home {
       margin: 0 auto;
       padding: 10vw;
       text-align: center;
-      color: white;
+      color: black;
     }
   }
